--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Xcode
+.DS_Store
+*/build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xccheckout
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+#vim
+*.swp
+*.swo
 
-# Executables
-*.exe
-*.out
-*.app
+#CocoaPods
+Pods
